# morning-pulse

./: .env.example  .gitignore  README.md  docker-compose.yml  git-add-commands.sh  package-lock.json  package.json
.chat/: AGENT-DIRECT-INSTRUCTIONS-T014-T015.md  HOW-TO-USE-AGENT-INSTRUCTIONS.md  SDD-T014-T015-URL-Hash-Agent-Prompt.md  SDD-T016-T023-Foundation-Infrastructure.md  TASK-SUMMARY-T014-T015.md  project-analysis-2024-11-14.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
apps/web/: .gitignore  .prettierignore  next.config.ts  package.json
apps/web/app/api/preview-newsletter/: route.ts
apps/web/app/api/send-test-email/: route.ts
apps/web/app/preview/: page.tsx
apps/web/prisma/: schema.prisma
apps/web/prisma/migrations/20251111103124_create_initial_schema/: migration.sql
apps/web/src/app/: layout.tsx  page.tsx
docs/: ARCHITECTURE.md
docs/diagrams/: architecture-flow.mmd  architecture-sequence.mmd
scripts/etl/: fetch-articles.ts  seed-sources.ts
scripts/ops/: build-newsletter.ts  enqueue-dedup.ts  enqueue-summarize.ts  metrics-logger.ts  verify-dedup.ts
services/nlp-py/: .gitignore  README.md  pyproject.toml
services/nlp-py/scripts/: lint.sh
services/nlp-py/src/: __init__.py
services/nlp-py/src/lib/: __init__.py  db.py  job_processor.py  logger.py
services/nlp-py/src/workers/: __init__.py  deduplicator.py  summarizer.py
services/nlp-py/tests/: conftest.py
specs/001-newsletter-mvp/: plan.md  research.md  spec.md  tasks.md
specs/001-newsletter-mvp/checklists/: requirements.md
(+35 files in other folders)
